# admin-template

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md
.kiro/specs/login-page-refactor/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: alembic.ini  main.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 20260414_151033_6e903e91a10e_add_rabc_models.py  20260428_102734_90fadb6fef4f_add_audit_log_table.py  20260429_143000_b7a4c9d2e1f3_set_upload_file_created_by_ondelete.py  20260429_170000_4cf9b992aa33_add_role_permission_unique.py  20260430_090000_7b63a4d2f911_replace_upload_permission.py  61addd19948e_add_base_mixins_and_user_timestamps.py  9e422d11bdee_add_system_setting_table.py  ea0d5c6d048d_add_upload_file_table.py
backend/app/api/: deps.py  main.py
backend/app/api/routers/: login.py  system_settings.py  teacher.py  uploads.py  users.py
backend/app/api/routers/admin/: audit_logs.py  classes.py  dashboard.py  roles.py  system_settings.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: Token.py  UserModels.py
backend/app/models/db/: __init__.py  audit_log.py  base.py  permission.py  role.py  rolePermission.py  system_setting.py  upload_file.py  user.py  userClass.py  userRole.py
backend/app/schemas/: __init__.py  class_member.py  response.py  role.py  system_setting.py  token.py  upload.py  user.py  user_class.py
backend/app/services/: UserServices.py  class_service.py  login_service.py  system_setting_service.py  upload_service.py  user_service.py
backend/app/services/storage/: base.py  local.py
backend/docs/: architecture.md  development_guide.md
backend/scripts/: format.sh  lint.sh  test-start.sh  test.sh
backend/tests/: _debug_500.py  _test_openapi.py  conftest.py
backend/tests/api/: test_login_router.py  test_rbac_enforcement.py  test_system_settings.py  test_teacher.py  test_uploads.py  test_users_me.py
backend/tests/api/admin/: test_audit_logs.py  test_classes.py  test_dashboard.py  test_roles.py  test_system_settings.py  test_users.py
backend/tests/api/login/: test_login_router.py
backend/tests/core/: test_db_init.py
backend/tests/services/: test_login_service.py  test_user_service.py
docker/: docker-compose.yml
docs/: architecture.md  dictionary-management-analysis.md  rbac-extension-guide.md  template-guide.md
frontend/: Dockerfile  README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/docs/: architecture-frontend.md  development_guide.md
frontend/src/: index.css  router.tsx
frontend/src/lib/api/: me.ts  (+10 more)
(+60 files in other folders)
