[project]
name = "nos-agent-carrier"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
]



[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]



[tool.ruff]
line-length = 200
exclude = [".venv", "rag/svr/discord_svr.py"]

[tool.ruff.lint]
extend-select = ["ASYNC", "ASYNC1"]
ignore = ["E402"]
