[project]
name = "nos-agent-carrier"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi-pagination>=0.15.12",
    "fastapi[standard]>=0.135.3",
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "langgraph-api>=0.7.101",
    "langgraph-cli>=0.4.21",
    "langgraph-sdk>=0.3.13",
    "psycopg[binary]>=3.2.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
]



[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "mypy>=1.20.1",
    "prek>=0.3.9",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.30",
]



[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
line-length = 200
exclude = [".venv", "rag/svr/discord_svr.py", "alembic"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments in functions
    "T201", # print statements are not allowed
]


ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.ty.terminal]
error-on-warning = true
